k8s/legendaries/minecraft/mc.jbhannah.net.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-jbhannah-net
  namespace: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mc.jbhannah.net
spec:
  type: LoadBalancer
  ports:
    - name: minecraft
      port: 25565
    - name: rcon
      port: 25575

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mc-jbhannah-net
  namespace: minecraft
subsets:
  - addresses:
      - ip: 172.17.3.120
    ports:
      - name: minecraft
        port: 25565
      - name: rcon
        port: 25575
