k8s/legendaries/minecraft/mc.jbhannah.net.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-jbhannah-net
  namespace: minecraft
spec:
  ports:
    - name: minecraft
      port: 25565
    - name: rcon
      port: 25575

---
apiVersion: v1
kind: Endpoints
metadata:
  name: mc-jbhannah-net
  namespace: minecraft
subsets:
  - addresses:
      - ip: 172.17.3.120
    ports:
      - name: minecraft
        port: 25565
      - name: rcon
        port: 25575

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-jbhannah-net
  namespace: minecraft
spec:
  entryPoints:
    - mc-jbhannah-net
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: mc-jbhannah-net
          port: 25565

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-jbhannah-net-rcon
  namespace: minecraft
spec:
  entryPoints:
    - mc-rcon
  routes:
    - match: HostSNI(`*`)
      kind: Rule
      services:
        - name: mc-jbhannah-net
          port: 25575

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-jbhannah-net-exporter
  namespace: minecraft
  labels: &labels
    app.kubernetes.io/name: minecraft-exporter
    app.kubernetes.io/instance: mc-jbhannah-net
spec:
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
        - name: minecraft-exporter
          image: ghcr.io/jbhannah/minecraft-exporter:latest
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
          ports:
            - name: metrics
              containerPort: 8000
          volumeMounts:
            - name: world
              mountPath: /world
              readOnly: true
      nodeName: zacien.hannahs.family
      volumes:
        - name: world
          hostPath:
            path: /opt/minecraft/mc.jbhannah.net/world

---
apiVersion: v1
kind: Service
metadata:
  name: mc-jbhannah-net-exporter
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft-exporter
    app.kubernetes.io/instance: mc-jbhannah-net
    jobName: mc.jbhannah.net
spec:
  selector:
    app.kubernetes.io/name: minecraft-exporter
    app.kubernetes.io/instance: mc-jbhannah-net
  ports:
    - name: metrics
      port: 8000
